force-app/main/default/objects/Portal_Footer_Links__mdt/Portal_Footer_Links__mdt.object-meta.xml
<CustomObject>
    <label>Portal Footer Links</label>
    <pluralLabel>Portal Footer Links</pluralLabel>
</CustomObject>