force-app/main/default/objects/Portal_Footer_Links__mdt/fields/Link_Icon__c.field-meta.xml
<CustomField>
    <fullName>Link_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link Icon</label>
    <type>Checkbox</type>
</CustomField>