force-app/main/default/objects/Portal_Footer_Links__mdt/fields/Link_Name__c.field-meta.xml
<CustomField>
    <fullName>Link_Name__c</fullName>
    <label>Link Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>