force-app/main/default/objects/Portal_Footer_Links__mdt/fields/Link_Order__c.field-meta.xml
<CustomField>
    <fullName>Link_Order__c</fullName>
    <label>Link Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>