force-app/main/default/objects/Portal_Footer_Links__mdt/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>Link URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>