force-app/main/default/objects/Portal_Footer_Links__mdt/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <label>Section Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>